@startuml UC05_SearchProducts
!define ENTITY_COLOR #FFE0B2
!define USECASE_COLOR #B3E5FC
!define INTERFACE_COLOR #C8E6C9
!define FRAMEWORK_COLOR #F0F0F0

title UC05: Search Products - Clean Architecture

package "Entities (Domain)" <<Rectangle>> ENTITY_COLOR {
  class ProductEntity {
    +id: UUID
    +name: String
    +slug: String
    +description: String
    +categoryId: UUID
    +brandId: UUID
  }
  
  class ProductTag {
    +productId: UUID
    +tagId: UUID
  }
  
  class Tag {
    +id: UUID
    +name: String
  }
  
  note "Search operates on:\n- product name\n- description\n- associated tags" as searchNote
}

package "Use Cases (Application Logic)" <<Rectangle>> USECASE_COLOR {
  interface "IProductRepository\n<<Input Boundary>>" as IProductRepo {
    +searchProducts(query, categoryId, brandId, page, limit)
    +countSearchResults(query, categoryId, brandId)
  }
  
  class SearchProductsUseCase {
    +execute(request: ProductSearchRequest): ProductSearchResponse
    -convertToDto(entity: ProductEntity): ProductDto
  }
  
  note right of SearchProductsUseCase
    Search Business Rules:
    - Query must not be empty (after trim)
    - Case-insensitive search
    - Search in: name, description, tags
    - Can combine with category/brand filters
    - Use full-text search or LIKE queries
    - Return paginated results (default limit=10)
    - Calculate relevance score (optional)
  end note
}

package "Interface Adapters" <<Rectangle>> INTERFACE_COLOR {
  class ProductController {
    +searchProducts(query, page, limit, categoryId, brandId)
  }
  
  class ProductSearchRequest {
    +query: String
    +page: int = 1
    +limit: int = 10
    +categoryId: String
    +brandId: String
    validate() throws IllegalArgumentException
  }
  
  class ProductSearchResponse {
    +products: List<ProductDto>
    +pagination: PaginationDto
  }
  
  class "Frontend Search\nComponent" as SearchUI {
    +SearchInput
    +SearchButton
    +SearchResultsDisplay
  }
}

package "Frameworks & Drivers" <<Rectangle>> FRAMEWORK_COLOR {
  class ProductRepositoryAdapter {
    +searchProducts(...)
    +countSearchResults(...)
  }
  
  database "PostgreSQL\nFull-Text Search" as DB {
    SELECT * FROM products p
    LEFT JOIN product_tags pt ON p.id = pt.product_id
    LEFT JOIN tags t ON pt.tag_id = t.id
    WHERE 
      LOWER(p.name) LIKE LOWER('%query%')
      OR LOWER(p.description) LIKE LOWER('%query%')
      OR LOWER(t.name) LIKE LOWER('%query%')
    LIMIT ? OFFSET ?
  }
  
  class "Spring MVC\nHTTP Request" as HTTP
  
  class "Next.js Client\nSearch Page" as Client {
    query: string
    results: ProductDto[]
    searchService.searchProducts(query)
  }
}

' Relationships
Client --> HTTP : GET /api/products/search?query=blue+shirt
HTTP --> ProductController : with search params
ProductController --> SearchProductsUseCase : execute(request)
SearchProductsUseCase --> IProductRepo : searchProducts(query)
SearchProductsUseCase --> IProductRepo : countSearchResults(query)
IProductRepo <|.. ProductRepositoryAdapter : implements
ProductRepositoryAdapter --> DB : Full-text query
SearchProductsUseCase ..> ProductSearchResponse : search results
ProductController ..> Client : JSON Response

Client o-- SearchUI : user enters search query

SearchProductsUseCase ..> ProductEntity : reads matching
SearchProductsUseCase ..> ProductTag : searches tags
SearchProductsUseCase ..> Tag : tag names

searchNote .. ProductEntity
searchNote .. ProductTag
searchNote .. Tag

@enduml
